# carros

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  test.db
app/: routes.py  server.py
app/api/: routes.py  server.py
config/: settings.py
database/: sqlmodel.py
domain/: entities.py  exceptions.py
models/: veiculo.py
repositories/: base.py  data.py  veiculo.py
services/: veiculo.py
tests/: test_api.py
